flapivor/tests/m3/hopix/typechecker/good/25-polymorphic-record-proj.hopix
type P<a, b> = { x : a; y : b }

val p : P<Int, String> = { x = 0; y = "Rose Tyler" }<Int, String>

val x : Int = p.x

val y : String = p.y