flapivor/tests/m3/hopix/typechecker/bad/32-record-06.hopix
type T = { l : Int; x : Int }

val r : T = { l = 0 }<>